--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,8 @@
 name: Build
 
 on:
+  schedule:
+    - cron: '0 15 1 * *'
   push:
     branches-ignore:  # build all branches except:
     - 'dependabot/**'  # prevent GHA triggered twice (once for commit to the branch and once for opening/syncing the PR)
@@ -76,6 +78,10 @@ jobs:
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}-${{ matrix.maven_version }}
       cancel-in-progress: false
+
+
+    permissions:
+      contents: write
 
 
     steps:
