--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,12 +3,10 @@
 # SPDX-License-Identifier: Apache-2.0
 # SPDX-ArtifactOfProjectHomePage: https://github.com/vegardit/vegardit-maven-parent
 #
-# https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions
+# https://docs.github.com/en/actions/writing-workflows/workflow-syntax-for-github-actions
 name: Build
 
 on:
-  schedule:
-    - cron: '0 15 1 * *'
   push:
     branches-ignore:  # build all branches except:
     - 'dependabot/**'  # prevent GHA triggered twice (once for commit to the branch and once for opening/syncing the PR)
@@ -28,8 +26,11 @@ on:
     - '.editorconfig'
     - '.git*'
     - '.github/*.yml'
+  schedule:
+    # https://docs.github.com/en/actions/writing-workflows/choosing-when-your-workflow-runs/events-that-trigger-workflows
+    - cron: '0 17 * * 3'
   workflow_dispatch:
-    # https://github.blog/changelog/2020-07-06-github-actions-manual-triggers-with-workflow_dispatch/
+    # https://docs.github.com/en/actions/writing-workflows/choosing-when-your-workflow-runs/events-that-trigger-workflows#workflow_dispatch
     inputs:
       additional_maven_args:
         description: 'Additional Maven Args'
@@ -60,7 +61,7 @@ jobs:
   ###########################################################
   maven-build:
   ###########################################################
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # https://github.com/actions/runner-images#available-images
     continue-on-error: ${{ matrix.experimental }}
     strategy:
       fail-fast: false
@@ -232,11 +233,11 @@ jobs:
 
         when="${{ inputs.debug-with-ssh }}"
 
-        if [[ $when == "always" ]] || [[ "$job_info" =~ .*$job_filter_pattern.* ]] && case "${{ job.status }}" in
+        if [[ $when == "always" ]] || { [[ "$job_info" =~ .*$job_filter_pattern.* ]] && case "${{ job.status }}" in
           success)   [[ $when == "always" ]] ;;
           cancelled) [[ $when == "on_failure_or_cancelled" ]] ;;
           failure)   [[ $when == "on_failure"* ]] ;;
-        esac; then
+        esac }; then
           echo "start_ssh_session=true" | tee -a "$GITHUB_OUTPUT"
         fi
 
