--- a/pom.xml
+++ b/pom.xml
@@ -328,7 +328,17 @@ check for new dependency/plugin updates using:
              */
             def javaVersion = getProjectProp("java.version");
             def javaMajorVersion = Integer.parseInt(javaVersion.indexOf(".") > -1 ? javaVersion.substring(0, javaVersion.indexOf(".")) : javaVersion);
-            def ecjVersion = javaMajorVersion < 17 ? "3.33.0" : project.properties["eclipse-java-compiler.version"]; def ecjArtifactMeta = artifactFactory.createArtifactWithClassifier("org.eclipse.jdt", "ecj", ecjVersion, "jar", null); def ecjArtifact = artifactResolver.resolve(new org.apache.maven.artifact.resolver.ArtifactResolutionRequest() .setArtifact(ecjArtifactMeta) .setLocalRepository(session.localRepository) .setRemoteRepositories(project.remoteArtifactRepositories) ).artifacts[0]; setProjectProp("custom.ecjJarPath", ecjArtifact.file.absolutePath); /* * check if .settings/org.eclipse.jdt.core.prefs is present */
+            def ecjVersion = javaMajorVersion < 17 ? "3.33.0" : project.properties["eclipse-java-compiler.version"];
+            def ecjArtifactMeta = artifactFactory.createArtifactWithClassifier("org.eclipse.jdt", "ecj", ecjVersion, "jar", null);
+            def ecjArtifact = artifactResolver.resolve(new org.apache.maven.artifact.resolver.ArtifactResolutionRequest()
+                                .setArtifact(ecjArtifactMeta)
+                                .setLocalRepository(session.localRepository)
+                                .setRemoteRepositories(project.remoteArtifactRepositories)
+                              ).artifacts[0];
+           setProjectProp("custom.ecjJarPath", ecjArtifact.file.absolutePath);
+           /*
+            * check if .settings/org.eclipse.jdt.core.prefs is present
+            */
            jdtCorePrefsFile = new File(project.basedir, ".settings/org.eclipse.jdt.core.prefs");
            if(jdtCorePrefsFile.exists()) {
              setProjectProp("custom.ecjProperties", "-properties \"" + jdtCorePrefsFile + "\"");
