--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,28 +7,33 @@
 name: Build
 
 on:
+  schedule:
+    # https://docs.github.com/en/actions/writing-workflows/choosing-when-your-workflow-runs/events-that-trigger-workflows
+    - cron: '0 17 * * 3'
   push:
     branches-ignore:  # build all branches except:
     - 'dependabot/**'  # prevent GHA triggered twice (once for commit to the branch and once for opening/syncing the PR)
     tags-ignore:  # don't build tags
     - '**'
     paths-ignore:
+    - '.act*'
     - '**/*.adoc'
     - '**/*.md'
     - '.editorconfig'
     - '.git*'
     - '.github/*.yml'
+    - '.github/ISSUE_TEMPLATE/*'
     - '.github/workflows/stale.yml'
   pull_request:
     paths-ignore:
+    - '.act*'
     - '**/*.adoc'
     - '**/*.md'
     - '.editorconfig'
     - '.git*'
     - '.github/*.yml'
-  schedule:
-    # https://docs.github.com/en/actions/writing-workflows/choosing-when-your-workflow-runs/events-that-trigger-workflows
-    - cron: '0 17 * * 3'
+    - '.github/ISSUE_TEMPLATE/*'
+    - '.github/workflows/stale.yml'
   workflow_dispatch:
     # https://docs.github.com/en/actions/writing-workflows/choosing-when-your-workflow-runs/events-that-trigger-workflows#workflow_dispatch
     inputs:
@@ -63,6 +68,10 @@ jobs:
   ###########################################################
     runs-on: ubuntu-latest  # https://github.com/actions/runner-images#available-images
     continue-on-error: ${{ matrix.experimental }}
+
+    permissions:
+      contents: write
+
     strategy:
       fail-fast: false
       matrix:
@@ -75,14 +84,10 @@ jobs:
           experimental: false
 
 
-    # https://docs.github.com/en/actions/using-jobs/using-concurrency
+    # https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/control-the-concurrency-of-workflows-and-jobs
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}-${{ matrix.maven_version }}
       cancel-in-progress: false
-
-
-    permissions:
-      contents: write
 
 
     steps:
