--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@ _LOCAL/
 !**/.settings/
 !**/.settings/org.eclipse.jdt.core.prefs
 bin/
-**/.*.md.html
 
 # Maven
 target/
@@ -25,16 +24,16 @@ buildNumber.properties
 .mvn/timing.properties
 
 # IntelliJ
-.idea
-*.iml
-*.ipr
-*.iws
+/.idea
+/*.iml
+/*.ipr
+/*.iws
 
 # NetBeans
 nb-configuration.xml
 
 # Visual Studio Code
-.vscode
+/.vscode
 
 # OSX
 .DS_Store
